src/objects/Project_Spending__c.object
<CustomObject>
    <description>This is an object created to support Project Central projects; it is used to track spending for a project.  It can be used for spending for any period of time (monthly, weekly, daily, etc.).</description>
    <fields>
        <fullName>Amount_Spent__c</fullName>
        <label>Amount Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <label>FY</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FY15</fullName>
                </value>
                <value>
                    <fullName>FY16</fullName>
                </value>
                <value>
                    <fullName>FY17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Spend_Fiscal_Year__c</fullName>
        <formula>IF(MONTH(Billing_Date__c)&lt;10, TEXT(YEAR(Billing_Date__c)), TEXT(YEAR(Billing_Date__c)+1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Spend Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>GPM_Project__c</referenceTo>
        <relationshipName>Monthly_Spendings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Spending</label>
    <nameField>
        <label>Project Spending Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Spending</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>